kubernetes/apps/downloads/qui/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qui
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: qui
  egress:
    - toFQDNs:
        - matchName: api.autobrr.com

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: qbittorrent
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
